podcasts/video lectures to check out

--- a/podcasts.mdwn
+++ b/podcasts.mdwn
@@ -1,1 +1,9 @@
-I listen to a lot of podcasts. . .
+I may check out. . .
+
+* http://ocw.mit.edu/courses/electrical-engineering-and-computer-science/6-033-computer-system-engineering-spring-2009/
+* [Stanford Engineering Everywhere: Programming Paradigms](http://see.stanford.edu/see/lecturelist.aspx?coll=2d712634-2bf1-4b55-9a3a-ca9d470755ee)
+* UC Berkely 162: http://inst.eecs.berkeley.edu/~cs162 http://www.youtube.com/watch?v=sjs5PtCsVA4
+* UC Berkely 61A
+* UC Berkely 61C
+* UC Berkely 164
+* http://surendar.chandrabrown.org
