--- a/sitemap.mdwn
+++ b/sitemap.mdwn
@@ -1,1 +1,5 @@
+[[!map pages="*.mdwn and !favicon.ico and !ikiwiki/* and !index and !local.css and !recentchanges and !sandbox and !shortcuts and !sitemap and !smileys* and !style.css and !templates* and !wikiicons/*"]]
+
+----
+
 [[!map pages="* and !favicon.ico and !ikiwiki/* and !index and !local.css and !recentchanges and !sandbox and !shortcuts and !sitemap and !smileys* and !style.css and !templates* and !wikiicons/*"]]
