hide wiki.setup from top level page list

--- a/sitemap.mdwn
+++ b/sitemap.mdwn
@@ -1,4 +1,4 @@
-[[!map pages="* and !*/* and !favicon.ico and !ikiwiki/* and !index and !local.css and !recentchanges and !sandbox and !shortcuts and !sitemap and !smileys* and !style.css and !templates* and !wikiicons/*"]]
+[[!map pages="* and !*/* and !favicon.ico and !ikiwiki/* and !index and !local.css and !recentchanges and !sandbox and !shortcuts and !sitemap and !smileys* and !style.css and !templates* and !wikiicons/* and !wiki.setup"]]
 
 ----
 
