make 164 its own bullet

--- a/podcasts.mdwn
+++ b/podcasts.mdwn
@@ -5,5 +5,5 @@ I may check out. . .
 * <a href="http://itunes.apple.com/us/itunes-u/computer-science-162-001-spring/id496414017">Computer Science 162, 001|Spring 2012|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs162/sp12/ http://www.youtube.com/watch?v=sjs5PtCsVA4
 * <a href="http://itunes.apple.com/us/itunes-u/computer-science-61c-001-spring/id354818653">Computer Science 61C, 001|Spring 2010|UC Berkeley - iTunes</a> http://www-inst.eecs.berkeley.edu/~cs61c/sp10/
 * <a href="http://itunes.apple.com/us/itunes-u/computer-science-61a-001-spring/id496414697">Computer Science 61A, 001|Spring 2012|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs61a/sp12/ http://www.youtube.com/watch?v=2ctRUep1QkA
-<a href="http://itunes.apple.com/us/itunes-u/computer-science-164-001-spring/id438297382">Computer Science 164, 001|Spring 2011|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs164 https://sites.google.com/a/bodik.org/cs164/ http://www.youtube.com/watch?v=MjR7tQTIWbc http://www.youtube.com/playlist?list=PL3A16CFC42CA6EF4F
+* <a href="http://itunes.apple.com/us/itunes-u/computer-science-164-001-spring/id438297382">Computer Science 164, 001|Spring 2011|UC Berkeley - iTunes</a> http://inst.eecs.berkeley.edu/~cs164 https://sites.google.com/a/bodik.org/cs164/ http://www.youtube.com/watch?v=MjR7tQTIWbc http://www.youtube.com/playlist?list=PL3A16CFC42CA6EF4F
 * http://surendar.chandrabrown.org
