--- a/monitoring/munin.mdwn
+++ b/monitoring/munin.mdwn
@@ -29,8 +29,10 @@ Plugins: https://github.com/munin-monitoring/contrib/
     type=USER_END msg=audit(1336315212.521:29175): user pid=9668 uid=498 auid=498 ses=1746 subj=system_u:system_r:crond_t:s0-s0:c0.c1023 msg='op=PAM:session_close acct="munin" exe="/usr/sbin/crond" hostname=? addr=? terminal=cron res=success'
     [root@server1 ~]# 
 
-See also #806 (yum plugin in 1.4.x does not cope with update from 1.2.6) - Munin - Trac - http://munin-monitoring.org/ticket/806
+### See also
 
-http://munin-monitoring.org/wiki/Debugging_Munin_plugins
-
-
+* http://munin-monitoring.org/browser/tags/1.4.7/plugins/node.d.linux/yum.in
+* http://pkgs.fedoraproject.org/gitweb/?p=munin.git;a=tree
+* http://munin-monitoring.org/wiki/Debugging_Munin_plugins
+* Bug 786030 – Munins yum.state is not created automatically - https://bugzilla.redhat.com/show_bug.cgi?id=786030
+* #806 (yum plugin in 1.4.x does not cope with update from 1.2.6) - Munin - Trac - http://munin-monitoring.org/ticket/806
