link my name to http://greptilian.com

--- a/greptilian.com.mdwn
+++ b/greptilian.com.mdwn
@@ -1,4 +1,4 @@
-http://greptilian.com is a domain owned by Philip Durbin
+http://greptilian.com is a domain owned by [Philip Durbin](http://greptilian.com).
 
 ## Servers
 
