--- a/dotfiles.mdwn
+++ b/dotfiles.mdwn
@@ -15,3 +15,25 @@
     Installing RDoc documentation for thor-0.15.1...
     Installing RDoc documentation for homesick-0.6.1...
     [pdurbin@server1 ~]$ 
+
+## briefcase
+
+    [pdurbin@server1 ~]$ gem install briefcase
+    Fetching: highline-1.6.11.gem (100%)
+    Fetching: commander-4.1.2.gem (100%)
+    Fetching: escape-0.0.4.gem (100%)
+    Fetching: briefcase-0.4.2.gem (100%)
+    Successfully installed highline-1.6.11
+    Successfully installed commander-4.1.2
+    Successfully installed escape-0.0.4
+    Successfully installed briefcase-0.4.2
+    4 gems installed
+    Installing ri documentation for highline-1.6.11...
+    Installing ri documentation for commander-4.1.2...
+    Installing ri documentation for escape-0.0.4...
+    Installing ri documentation for briefcase-0.4.2...
+    Installing RDoc documentation for highline-1.6.11...
+    Installing RDoc documentation for commander-4.1.2...
+    Installing RDoc documentation for escape-0.0.4...
+    Installing RDoc documentation for briefcase-0.4.2...
+    [pdurbin@server1 ~]$ 
