where pip puts files

--- a/python/packaging.mdwn
+++ b/python/packaging.mdwn
@@ -1,3 +1,10 @@
 http://foobar.lu/wp/2012/05/13/a-comprehensive-step-through-python-packaging-a-k-a-setup-scripts/
 
 http://guide.python-distribute.org/introduction.html#current-state-of-packaging
+
+## pip
+
+pip install django-tastypie results in installation at
+
+    root@precise64:~# ls /usr/local/lib/python2.7/dist-packages/tastypie
+
