git: fix your email address in your commits

--- a/git.mdwn
+++ b/git.mdwn
@@ -7,3 +7,11 @@
     git ls-files
 
 See also http://stackoverflow.com/questions/2405305/git-how-to-tell-if-a-file-is-git-tracked-by-shell-exit-code
+
+### Fix your email address in your commits
+
+http://stackoverflow.com/questions/750172/how-do-i-change-the-author-of-a-commit-in-git
+
+http://git-scm.com/docs/git-rebase#_recovering_from_upstream_rebase
+
+http://serverfault.com/questions/12373/how-do-i-edit-gits-history-to-correct-an-incorrect-email-address-name
