define account provisioning repos

--- a/greptilian.com/git/repos.mdwn
+++ b/greptilian.com/git/repos.mdwn
@@ -1,3 +1,5 @@
+account-provisioning-engine.git: spec for account provisioning app
+ape.git: django app in progress for account provisioning
 data-liberation.git: my data from various services  
 dotfiles.git: ~ sweet ~  
 gadfly.git: rants  
