remove git submodule

--- a/git.mdwn
+++ b/git.mdwn
@@ -28,3 +28,14 @@ Once your submodules are all set...
 http://chrisjean.com/2009/04/20/git-submodules-adding-using-removing-and-updating/
 
 
+#### Remove a git submodule
+
+> To remove a submodule you need to:
+> 
+> # Delete the relevant line from the ''.gitmodules'' file.
+> # Delete the relevant section from ''.git/config''.
+> # Run ''git rm --cached path_to_submodule'' (no trailing slash).
+> # Commit the superproject.
+> # Delete the now untracked submodule files.
+> 
+> -- https://git.wiki.kernel.org/index.php/GitSubmoduleTutorial
