--- a/git.mdwn
+++ b/git.mdwn
@@ -32,10 +32,10 @@ http://chrisjean.com/2009/04/20/git-submodules-adding-using-removing-and-updatin
 
 > To remove a submodule you need to:
 > 
-> # Delete the relevant line from the ''.gitmodules'' file.
-> # Delete the relevant section from ''.git/config''.
-> # Run ''git rm --cached path_to_submodule'' (no trailing slash).
-> # Commit the superproject.
-> # Delete the now untracked submodule files.
+> 1. Delete the relevant line from the ''.gitmodules'' file.
+> 1. Delete the relevant section from ''.git/config''.
+> 1. Run ''git rm --cached path_to_submodule'' (no trailing slash).
+> 1. Commit the superproject.
+> 1. Delete the now untracked submodule files.
 > 
 > -- https://git.wiki.kernel.org/index.php/GitSubmoduleTutorial
