--- a/vim.mdwn
+++ b/vim.mdwn
@@ -1,5 +1,14 @@
+## My dotfiles
+
+* http://git.greptilian.com/?p=dotfiles.git;a=blob;f=.vimrc;hb=HEAD
+* http://git.greptilian.com/?p=dotfiles.git;a=tree;f=.vim;hb=HEAD
+
+## Pathogen and git submodules
+
 http://vimcasts.org/episodes/synchronizing-plugins-with-git-submodules-and-pathogen/
 
-http://git.greptilian.com/?p=dotfiles.git;a=blob;f=.vimrc;hb=HEAD
+## Vim and MediaWiki
 
-http://git.greptilian.com/?p=dotfiles.git;a=tree;f=.vim;hb=HEAD
+http://en.wikipedia.org/wiki/Wikipedia:Text_editor_support#Use_It.27s_All_Text.21_to_invoke_an_external_editor
+
+http://kly.no/posts/2010_08_31__Wiki_sh___mediawiki_for_geeks__.html
