--- a/request-tracker/4/rpm.mdwn
+++ b/request-tracker/4/rpm.mdwn
@@ -1,3 +1,3 @@
-## RT 4 RPMs
+## RT 4 RPM
 
 For now an RT 4 beta RPM (and its dependencies) are available at http://server1.greptilian.com/rpms/request-tracker/4/beta/
